[package]
name = "notion_formula_core"
version = "0.1.0"
authors = ["Josh <joshrasmussen34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pipeline = { path = "../pipeline" }
lookahead_buffer = { path = "../lookahead_buffer" }
